--- a/debian.master/control.stub.in
+++ b/debian.master/control.stub.in
@@ -40,12 +40,11 @@ Build-Depends:
  curl <!stage1>,
  zstd <!stage1>,
  pahole [amd64 arm64 armhf ppc64el s390x riscv64] | dwarves (>= 1.21) [amd64 arm64 armhf ppc64el s390x riscv64] <!stage1>,
- clang-18 [amd64 arm64 armhf ppc64el riscv64 s390x],
+ clang-15 [amd64 arm64 armhf ppc64el riscv64 s390x],
  rustc [amd64 arm64 armhf ppc64el riscv64 s390x],
  rust-src [amd64 arm64 armhf ppc64el riscv64 s390x],
- rustfmt [amd64 arm64 armhf ppc64el riscv64 s390x],
- bindgen-0.65 [amd64 arm64 armhf ppc64el riscv64 s390x],
- libstdc++-dev,
+ bindgen [amd64 arm64 armhf ppc64el riscv64 s390x],
+ libstdc++-12-dev,
 Build-Depends-Indep:
  xmlto <!stage1>,
  bzip2 <!stage1>,
